--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -8,6 +8,7 @@
   <a mat-button class="docs-navbar-hide-small docs-button" routerLink="/questionnaires">{{ 'QUESTIONNAIRES.TITLE' | translate }}</a>
   <a mat-button class="docs-navbar-hide-small docs-button" routerLink="/pointsbadges">{{ 'POINTSBADGES.TITLE' | translate }}</a>
   <a mat-button class="docs-navbar-hide-small docs-button" routerLink="/collections">{{ 'COLLECTIONS.TITLE' | translate }}</a>
-
+  <a mat-button class="docs-navbar-hide-small docs-button" routerLink="/competitions">{{ 'COMPETITIONS.TITLE' | translate }}</a>
+  <a mat-button class="docs-navbar-hide-small docs-button" routerLink="/create-teams">{{ 'TEAMS.TITLE' | translate }}</a>
   <a mat-button class="docs-navbar-hide-small docs-button" routerLink="/login" >{{ 'APP.LOGOUT' | translate }}</a>
 </nav>
