--- a/src/app/pages/competitions/league/classification/classification.html
+++ b/src/app/pages/competitions/league/classification/classification.html
@@ -34,6 +34,38 @@
         {{ 'CLASSIFICATION.INFORMATION' | translate }}
     </div>
   </mat-card>
+
+    <mat-card *ngIf="competition">
+        <strong>Premios</strong>
+        <mat-tab-group [dynamicHeight]="true" *ngIf="utilsService.role === 1">
+            <mat-tab label ="{{ 'POINTS.TITLE' | translate }}">
+                <br>
+                  <mat-form-field hintLabel="{{'COMMON.MAX2NUMBER'| translate}}">
+                      <input matInput #input maxlength="2" [(ngModel)]="Primer_p_value" placeholder="{{'COMPETITIONS.POINTS_FIRST'| translate}}">
+                      <mat-hint align="end"></mat-hint>
+                    </mat-form-field>
+                    <button mat-button (click)="SendPoint1()" *ngIf="Primer_p_value">
+                      <mat-icon mat-list-icon >chevron_right</mat-icon>
+                      {{ 'CLASSIFICATION.AWARDS1' | translate }}
+                    </button>
+                    <br>
+
+                  <mat-form-field hintLabel="{{'COMMON.MAX2NUMBER'| translate}}">
+                      <input matInput #input maxlength="2" [(ngModel)]="Segon_p_value" placeholder="{{'COMPETITIONS.POINTS_SECOND'| translate}}">
+                      <mat-hint align="end"></mat-hint>
+                    </mat-form-field>
+                    <button mat-button (click)="SendPoint2()" *ngIf="Segon_p_value">
+                      <mat-icon mat-list-icon >chevron_right</mat-icon>
+                      {{ 'CLASSIFICATION.AWARDS2' | translate }}
+                    </button>
+                <br>
+            </mat-tab>
+            <mat-tab label= "{{ 'BADGES.TITLE' | translate }}"> <br> Content 2 <br> </mat-tab>
+            <mat-tab label= "{{ 'CARDS.TITLE' | translate }}"> <br> Content 3 <br> </mat-tab>
+            <br>
+        </mat-tab-group>
+    </mat-card>
+
     <div class="final-buttons">
         <a mat-button [routerLink]="['/competition/league', competitionId]">
           <mat-icon mat-list-icon>navigate_before</mat-icon>
