--- a/src/app/pages/competitions/league/classification/classification.html
+++ b/src/app/pages/competitions/league/classification/classification.html
@@ -60,7 +60,28 @@
                     </button>
                 <br>
             </mat-tab>
-            <mat-tab label= "{{ 'BADGES.TITLE' | translate }}"> <br> Content 2 <br> </mat-tab>
+            <mat-tab label= "{{ 'BADGES.TITLE' | translate }}">
+                <br>
+                <mat-form-field hintLabel="{{'COMMON.MAX2NUMBER'| translate}}">
+                    <input matInput #input maxlength="2" [(ngModel)]="Primer_b_value" placeholder="{{'COMPETITIONS.BADGES_FIRST'| translate}}">
+                    <mat-hint align="end"></mat-hint>
+                  </mat-form-field>
+                  <button mat-button (click)="SendBadge1()" *ngIf="Primer_b_value">
+                    <mat-icon mat-list-icon >chevron_right</mat-icon>
+                    {{ 'CLASSIFICATION.AWARDS1' | translate }}
+                  </button>
+                  <br>
+
+                <mat-form-field hintLabel="{{'COMMON.MAX2NUMBER'| translate}}">
+                    <input matInput #input maxlength="2" [(ngModel)]="Segon_b_value" placeholder="{{'COMPETITIONS.BADGES_SECOND'| translate}}">
+                    <mat-hint align="end"></mat-hint>
+                  </mat-form-field>
+                  <button mat-button (click)="SendBadge2()" *ngIf="Segon_b_value">
+                    <mat-icon mat-list-icon >chevron_right</mat-icon>
+                    {{ 'CLASSIFICATION.AWARDS2' | translate }}
+                  </button>
+              <br>
+            </mat-tab>
             <mat-tab label= "{{ 'CARDS.TITLE' | translate }}"> <br> Content 3 <br> </mat-tab>
             <br>
         </mat-tab-group>
