--- a/src/app/pages/competitions/tennis/tournaments/tournaments.html
+++ b/src/app/pages/competitions/tennis/tournaments/tournaments.html
@@ -62,6 +62,84 @@
         </mat-card-content>
       </mat-card>
      </div>
+     <div>
+        <h4>{{ 'COMMON.AWARDS' | translate }}:</h4>
+        <mat-card>
+          <br>
+          <mat-form-field *ngIf="modeIndividual === true">
+              <mat-select [(value)]="studentSelected" placeholder="{{'STUDIENTS.CHOOSE' | translate}}"  [formControl]= "myControl">
+                  <mat-option *ngFor="let student of collectionStudents" [value]="student" (click)="SelectedName()">
+                      {{student.name}}
+                    </mat-option>
+              </mat-select>
+          </mat-form-field>
+          <mat-form-field *ngIf="modeIndividual === false">
+            <mat-select [(value)]="teamSelected" placeholder="{{'TEAMS.TEAM' | translate}}"  [formControl]= "myControl">
+                <mat-option *ngFor="let student of collectionTeams" [value]="student" (click)="SelectedName()">
+                    {{student.name}}
+                  </mat-option>
+            </mat-select>
+        </mat-form-field>
+          <br>
+          <mat-tab-group *ngIf="teamSelected || studentSelected">
+              <mat-tab label ="{{ 'POINTS.TITLE' | translate }}">
+                  <br>
+                  <mat-form-field hintLabel="{{'COMMON.MAX1NUMBER'| translate}}">
+                      <input matInput #input maxlength="1" [(ngModel)]="Primer_p_value" placeholder="{{'COMPETITIONS.POINTS_FIRST'| translate}}">
+                      <mat-hint align="end"></mat-hint>
+                    </mat-form-field>
+                    <button mat-button (click)="SendPoint()" *ngIf="Primer_p_value">
+                      <mat-icon mat-list-icon >chevron_right</mat-icon>
+                      {{ 'CLASSIFICATION.AWARDS1' | translate }}
+                    </button>
+                <br>
+              </mat-tab>
+              <mat-tab label= "{{ 'BADGES.TITLE' | translate }}">
+                <br>
+                <mat-form-field hintLabel="{{'COMMON.MAX2NUMBER'| translate}}">
+                    <input matInput #input maxlength="2" [(ngModel)]="Primer_b_value" placeholder="{{'COMPETITIONS.BADGES_FIRST'| translate}}">
+                    <mat-hint align="end"></mat-hint>
+                  </mat-form-field>
+                  <button mat-button (click)="SendBadge()" *ngIf="Primer_b_value">
+                    <mat-icon mat-list-icon >chevron_right</mat-icon>
+                    {{ 'CLASSIFICATION.AWARDS1' | translate }}
+                  </button>
+                  <br>
+              </mat-tab>
+              <mat-tab label= "{{ 'CARDS.TITLE' | translate }}">
+                <br>
+                <mat-form-field>
+                    <mat-select [(value)]="CollectionSelected" placeholder="{{'COLLECTIONS.CHOOSE' | translate}}"  [formControl]= "myControl">
+                        <mat-option *ngFor="let coleccion of collections" [value]="coleccion" (click)="showCards()">
+                            {{coleccion.name}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <br>
+              <mat-form-field *ngIf = "CollectionSelected">
+                  <mat-select [(value)]="optionType" placeholder="{{'COMMON.TYPEASSIGNMENTCHOOSE' | translate}}"  [formControl]= "myControl">
+                      <mat-option *ngFor="let option of options" [value]="option">
+                          {{option}}
+                      </mat-option>
+                  </mat-select>
+              </mat-form-field>
+              <mat-form-field *ngIf = "optionType == options[0]">
+                  <mat-select [(value)]="cardSelected" placeholder="{{'CARDS.CHOOSE' | translate}}"  [formControl]= "myControl">
+                      <mat-option *ngFor="let card of collectionCards" [value]="card.id">
+                          {{card.name}} ({{card.rank}})
+                        </mat-option>
+                  </mat-select>
+              </mat-form-field>
+                <br>
+                <button mat-button (click)="assignCardsToStudent()" *ngIf="optionType">
+                    <mat-icon mat-list-icon >chevron_right</mat-icon>
+                    {{ 'CARDS.ASSIGN' | translate }}
+                </button>
+              </mat-tab>
+            </mat-tab-group>
+
+        </mat-card>
+      </div>
   </div>
   <div class="final-buttons">
       <a mat-button [routerLink]="['/competition/tennis', competitionId]">
