--- a/src/app/pages/pointsbadges/pointsbadges.html
+++ b/src/app/pages/pointsbadges/pointsbadges.html
@@ -1,53 +1,54 @@
 <div class="point-content">
-
     <h3 mat-header>{{ 'POINTSBADGES.TITLE' | translate }}</h3>
-
+    <mat-card *ngIf="isTeacher">
+        <mat-form-field>
+            <mat-select [(value)]="optionType" placeholder="{{'COMMON.TYPEASSIGNMENTCHOOSE' | translate}}"  [formControl]= "myControl">
+                <mat-option *ngFor="let option of options" [value]="option" (click)="GetStudents()">
+                    {{option}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+        <mat-form-field *ngIf="optionType">
+            <mat-select [(value)]="groupSelected" placeholder="{{ 'GROUPS.CHOOSE' | translate }}" [formControl]= "myControl">
+              <mat-option *ngFor="let group of mygroups" [value]="group.id" (click)="GetStudents()">
+                {{group.name}}
+              </mat-option>
+            </mat-select>
+        </mat-form-field>
+        <br>
+        <mat-form-field *ngIf="optionType == options[0] && groupSelected">
+            <mat-select [(value)]="studentSelected" placeholder="{{ 'STUDIENTS.CHOOSE' | translate }}" [formControl]= "myControl">
+              <mat-option *ngFor="let student of mystudents" [value]="student.id">
+                {{student.name}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field *ngIf="optionType == options[1] && groupSelected">
+              <mat-select [(value)]="teamSelected" placeholder="{{ 'TEAMS.CHOOSE' | translate }}" [formControl]= "myControl">
+                <mat-option *ngFor="let student of collectionTeams" [value]="student">
+                  {{student.name}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+    </mat-card>
     <mat-tab-group>
-
       <mat-tab label ="{{ 'POINTS.TITLE' | translate }}">
-          <ol>
-              <mat-card class="assign-content" *ngIf="isTeacher">
-                  <h5 mat-subheader>{{ 'POINTS.ASSIGN' | translate }}</h5>
-                <mat-form-field >
-                    <mat-select [(value)]="groupSelected" placeholder="{{ 'GROUPS.CHOOSE' | translate }}">
-
-                      <mat-option *ngFor="let group of mygroups" [value]="group.id" (click)="openStudents()">
-                        {{group.name}}
-                      </mat-option>
-                    </mat-select>
-
+          <mat-card class="assign-content" *ngIf="isTeacher && (studentSelected || teamSelected)">
+              <h5 mat-subheader>{{ 'POINTS.ASSIGN' | translate }}</h5>
+              <mat-form-field >
+                  <mat-select [(value)]="pointSelected" placeholder="{{ 'POINTS.CHOOSE' | translate }}" [formControl]= "myControl">
+                    <mat-option *ngFor="let point of points" [value]="point.id">
+                      {{point.name}}
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
+                <br>
+                <mat-form-field>
+                    <input matInput type="number" min="0" [(ngModel)]="valueSelected" placeholder="{{ 'COMMON.CHOOSEAMOUNT' | translate }}">
                   </mat-form-field>
-                  <mat-form-field >
-                      <mat-select [(value)]="studentSelected" placeholder="{{ 'STUDIENTS.CHOOSE' | translate }}" [formControl]= "myControl">
-
-                        <mat-option *ngFor="let student of mystudents" [value]="student.id">
-                          {{student.name}}
-                        </mat-option>
-                      </mat-select>
-
-                    </mat-form-field>
-
-
-                    <mat-form-field >
-                        <mat-select [(value)]="pointSelected" placeholder="{{ 'POINTS.CHOOSE' | translate }}" [formControl]= "myControl">
-
-                          <mat-option *ngFor="let point of points" [value]="point.id">
-                            {{point.name}}
-                          </mat-option>
-                        </mat-select>
-
-                      </mat-form-field>
-                      <br>
-                      <mat-form-field>
-                          <input matInput type="number" min="0" [(ngModel)]="valueSelected" placeholder="{{ 'COMMON.CHOOSEAMOUNT' | translate }}">
-                        </mat-form-field>
-
-                        <button class="buttonsend" mat-raised-button (click)="sendPointRelation()">{{ 'POINTS.SEND' | translate }}</button>
-
-
-                </mat-card>
-            </ol>
-
+                  <button class="buttonsend" mat-raised-button (click)="sendPointRelation()">{{ 'POINTS.SEND' | translate }}</button>
+          </mat-card>
+          <br>
             <mat-nav-list class = "studentlist" *ngIf="listPoints">
                 <h3 mat-subheader>{{ 'POINTS.MYPOINTS' | translate }}</h3>
                 <mat-list-item class="total">
@@ -62,94 +63,55 @@
                   <p>{{ 'POINTS.OBTAINED' | translate }}: {{resultPoint.relationPoint.value}}</p>
                   <p mat-line>{{ 'POINTS.VALUEOF' | translate }}: {{resultPoint.point.value}}</p>
                 </mat-list-item>
-
-
                 <mat-progress-bar mode="buffer"></mat-progress-bar>
               </mat-nav-list>
 
             <mat-nav-list *ngIf="points">
                 <h3 mat-subheader>{{ 'POINTS.LIST' | translate }}</h3>
-
                 <mat-list-item *ngFor="let point of points" >
                     <img matListAvatar src={{point.image}}>
                   <h4 mat-line>{{point.name}}</h4>
                   <p mat-line>{{ 'POINTSBADGES.POINTID' | translate }}{{point.id}}</p>
                 </mat-list-item>
-
                 <mat-progress-bar mode="buffer"></mat-progress-bar>
               </mat-nav-list>
-              <ol *ngIf="isTeacher" >
+
+              <div *ngIf="isTeacher" >
                   <button mat-raised-button (click)="createPoint()">{{ 'POINTSBADGES.CREATEPOINT' | translate }}</button>
-                </ol>
-
-
-                <ol *ngIf="isTeacher">
-                    <mat-form-field>
+                  <br>
+                  <mat-form-field>
                       <input matInput [(ngModel)]="pointId" placeholder="{{'POINTSBADGES.POINTID' | translate}}">
                     </mat-form-field>
                     <button mat-raised-button (click)="deletePoint()">{{ 'POINTS.DELETE' | translate }}</button>
-                </ol>
-
-
+              </div>
       </mat-tab>
 
       <mat-tab label= "{{ 'BADGES.TITLE' | translate }}">
+
+          <mat-card class="assign-content" *ngIf="isTeacher && (studentSelected || teamSelected)">
+              <h5 mat-subheader>{{ 'BADGES.ASSIGN' | translate }}</h5>
+            <mat-form-field >
+                <mat-select [(value)]="badgeSelected" placeholder="{{ 'BADGES.CHOOSE' | translate }}" [formControl]= "myControl">
+                  <mat-option *ngFor="let badge of badges" [value]="badge.id">
+                    {{badge.name}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+              <br>
+              <button class="buttonsend2" mat-raised-button (click)="sendBadgeRelation()">{{ 'BADGES.SEND' | translate }}</button>
+          </mat-card>
+          <br>
           <mat-nav-list class = "studentlist" *ngIf="listBadges">
               <h3 mat-subheader>{{ 'BADGES.MYBADGES' | translate }} ({{studentBadges.length}})</h3>
-
-
               <mat-list-item *ngFor="let resultBadge of listBadges" >
                 <img matListAvatar src={{resultBadge.badge.image}}>
                 <h4 mat-line>{{resultBadge.badge.name}}</h4>
                 <p>{{ 'BADGES.VALUEOF' | translate }}: {{resultBadge.badge.value}}</p>
-
               </mat-list-item>
-
-
               <mat-progress-bar mode="buffer"></mat-progress-bar>
             </mat-nav-list>
-          <ol>
-              <mat-card class="assign-content" *ngIf="isTeacher">
-                  <h5 mat-subheader>{{ 'BADGES.ASSIGN' | translate }}</h5>
-                <mat-form-field >
-                    <mat-select [(value)]="groupSelected2" placeholder="{{ 'GROUPS.CHOOSE' | translate }}" >
-
-                      <mat-option *ngFor="let group of mygroups" [value]="group.id" (click)="openStudents2()">
-                        {{group.name}}
-                      </mat-option>
-                    </mat-select>
-
-                  </mat-form-field>
-                  <mat-form-field >
-                      <mat-select [(value)]="studentSelected2" placeholder="{{ 'STUDIENTS.CHOOSE' | translate }}" [formControl]= "myControl">
-
-                        <mat-option *ngFor="let student of mystudents" [value]="student.id">
-                          {{student.name}}
-                        </mat-option>
-                      </mat-select>
-
-                    </mat-form-field>
-
-
-                    <mat-form-field >
-                        <mat-select [(value)]="badgeSelected" placeholder="{{ 'BADGES.CHOOSE' | translate }}" [formControl]= "myControl">
-
-                          <mat-option *ngFor="let badge of badges" [value]="badge.id">
-                            {{badge.name}}
-                          </mat-option>
-                        </mat-select>
-
-                      </mat-form-field>
-                      <br>
-                      <button class="buttonsend2" mat-raised-button (click)="sendBadgeRelation()">{{ 'BADGES.SEND' | translate }}</button>
-
-
-                </mat-card>
-            </ol>
-
             <br>
         <mat-nav-list *ngIf="badges">
-
             <h3 mat-subheader>{{ 'BADGES.LIST' | translate }}</h3>
             <mat-list-item *ngFor="let badge of badges" >
                 <img matListAvatar src={{badge.image}}>
@@ -158,34 +120,24 @@
             </mat-list-item>
             <mat-progress-bar mode="buffer"></mat-progress-bar>
           </mat-nav-list>
-
-
-          <ol *ngIf="isTeacher">
+          <div *ngIf="isTeacher">
               <button mat-raised-button (click)="createBadge()">{{ 'POINTSBADGES.CREATEBADGE' | translate }}</button>
-          </ol>
-
-          <ol *ngIf="isTeacher">
+              <br>
               <mat-form-field>
                 <input matInput [(ngModel)]="badgeId" placeholder="{{ 'POINTSBADGES.BADGEID' | translate }}">
               </mat-form-field>
               <button mat-raised-button (click)="deleteBadge()">{{ 'BADGES.DELETE' | translate }}</button>
-          </ol>
-
-
-
+          </div>
       </mat-tab>
       <mat-tab label = "{{ 'POINTS.STUDIENTS' | translate }}" *ngIf="isTeacher">
-            <br>
-
+            <!-- <br>
             <mat-card class="selectGroup" >
             <mat-form-field>
                 <mat-select [(value)]="groupSelectedList" placeholder="{{ 'GROUPS.CHOOSE' | translate }}" >
-
                   <mat-option *ngFor="let group of mygroups" [value]="group.id">
                     {{group.name}}
                   </mat-option>
                 </mat-select>
-
               </mat-form-field>
               <button mat-raised-button (click)="showStudents()">{{ 'STUDIENTS.SHOW' | translate }}</button>
             </mat-card>
@@ -196,24 +148,8 @@
                       <p align="end">{{ 'POINTS.TOTAL' | translate }}: {{student.totalPoints}}</p>
                       <p mat-line>{{student.surname}}</p>
                       <p mat-line>ID: {{student.id}}</p>
-
-
                   </mat-list-item>
-
-
-              </mat-nav-list>
-
-
-
-
-
+              </mat-nav-list> -->
       </mat-tab>
-
-
-
-
     </mat-tab-group>
-
-
-
   </div>
