--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -3,11 +3,17 @@
     <img class="docs-classpip-logo" src="../../../assets/img/classpip-icon.svg" alt="angular">
     <span>{{ 'APP.NAME' | translate }}</span>
   </a>
-  <a mat-button class="docs-navbar-hide-small docs-button" routerLink="/home">{{ 'HOME.TITLE' | translate }}</a>
-  <a mat-button class="docs-navbar-hide-small docs-button" routerLink="/groups">{{ 'GROUPS.TITLE' | translate }}</a>
-  <a mat-button class="docs-navbar-hide-small docs-button" routerLink="/questionnaires">{{ 'QUESTIONNAIRES.TITLE' | translate }}</a>
-  <a mat-button class="docs-navbar-hide-small docs-button" routerLink="/pointsbadges">{{ 'POINTSBADGES.TITLE' | translate }}</a>
-  <a mat-button class="docs-navbar-hide-small docs-button" routerLink="/collections">{{ 'COLLECTIONS.TITLE' | translate }}</a>
+  <a *ngIf="isLoggedIn" mat-button class="docs-navbar-hide-small docs-button" routerLink="/home">{{ 'HOME.TITLE' |
+    translate }}</a>
+  <a *ngIf="isLoggedIn" mat-button class="docs-navbar-hide-small docs-button" routerLink="/groups">{{ 'GROUPS.TITLE' |
+    translate }}</a>
+  <a *ngIf="isLoggedIn" mat-button class="docs-navbar-hide-small docs-button" routerLink="/questionnaires">{{
+    'QUESTIONNAIRES.TITLE' | translate }}</a>
+  <a *ngIf="isLoggedIn" mat-button class="docs-navbar-hide-small docs-button" routerLink="/pointsbadges">{{
+    'POINTSBADGES.TITLE' | translate }}</a>
+  <a *ngIf="isLoggedIn" mat-button class="docs-navbar-hide-small docs-button" routerLink="/collections">{{
+    'COLLECTIONS.TITLE' | translate }}</a>
 
-  <a mat-button class="docs-navbar-hide-small docs-button" routerLink="/login" >{{ 'APP.LOGOUT' | translate }}</a>
+  <a *ngIf="isLoggedIn" mat-button class="docs-navbar-hide-small docs-button nav-close-session" routerLink="/login">{{
+    'APP.LOGOUT' | translate }}</a>
 </nav>
