--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -15,6 +15,6 @@
   <a mat-button class="docs-navbar-hide-small docs-button" routerLink="/login">{{ 'APP.LOGOUT' | translate }}</a>
   <button mat-button class="docs-navbar-hide-small docs-button language-button" (click)="choose()">{{ 'HOME.LANGUAGE' |
     translate }}<div class="mat-select-arrow-wrapper">
-      <div class="mat-select-arrow" style="background:#fff"></div>
+      <div class="mat-select-arrow"></div>
     </div></button>
 </nav>
