--- a/src/app/shared/navbar/navbar.scss
+++ b/src/app/shared/navbar/navbar.scss
@@ -13,7 +13,7 @@
   .language-button {
     border-left: 1px solid #fff;
     border-radius: 0;
-    float: left;
+    float: right;
 
     .mat-select-arrow {
       color: #fff;
