--- a/src/app/pages/viewbadges/viewbadges.html
+++ b/src/app/pages/viewbadges/viewbadges.html
@@ -1,4 +1,4 @@
-<div class="createPoint-content">
+<div>
 
   <mat-nav-list class="studentlist" *ngIf="listBadges">
     <h3 mat-subheader>{{ 'BADGES.MYBADGES' | translate }} ({{studentBadges.length}})</h3>
