--- a/src/app/pages/viewpoints/viewpoints.html
+++ b/src/app/pages/viewpoints/viewpoints.html
@@ -1,4 +1,4 @@
-<div class="createPoint-content">
+<div>
 
   <mat-nav-list class="studentlist" *ngIf="listPoints">
     <h3 mat-subheader>{{ 'POINTS.MYPOINTS' | translate }} ({{listPoints.length}})</h3>
